Now compiling for ubuntu 22.04 and gcc-13

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.22)
 
 project(Stellar-Salvage
         LANGUAGES CXX
@@ -15,8 +15,8 @@ if (UNIX)
     find_package(PkgConfig REQUIRED)
     find_package(SDL2 REQUIRED)
     # find_package does not find sdl2 ttf under ubuntu
-    PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
-    PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
+#    PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
+#    PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
 else ()
     find_package(SDL2 REQUIRED)
     #find_package(SDL2_ttf REQUIRED)
